# solar-sentinel

./: .gitignore  LICENSE  README.md
casing/: case.step  main.kcl  main.step
src/: .env.example  README.md  pyproject.toml
src/app/: config.py  main.py
src/app/agents/: crew.py  model_router.py
src/app/agents/config/: agents.yaml  tasks.yaml
src/app/api/: deps.py
src/app/api/routes/: camera.py  detections.py  health.py  reports.py  settings.py
src/app/core/: camera.py  demo.py  detector.py  scheduler.py  triage.py
src/app/db/: database.py
src/app/models/: detection.py  report.py  settings.py
src/app/services/: gemini.py  notifications.py  weather.py
src/data/: solar_sentinel_demo.db
src/deploy/: first-boot.sh  solar-sentinel.service
src/notebooks/: evaluate_model.ipynb  train_yolo26n.ipynb
src/tests/: conftest.py  test_camera.py  test_config.py  test_crew.py  test_database.py  test_deps.py  test_detector.py  test_gemini.py  test_model_router.py  test_models.py  test_notifications.py  test_routes.py  test_scheduler.py  test_triage.py  test_weather.py
src/ui/: app.js  index.html  style.css
